src/components/UserWebpage/UserWebpage.css
.webpage-wrapper {
  min-height: 100vh;
  /* border: 2px solid red; */
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-grow: 1;
  position: relative;
}

.store-header-img {
  height: 245px;
  background-color: #f7f7f8;
  width: 100%;
}

.subscribe-form {
  width: 400px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 2em;
}

.subscribe-form input {
  display: inline;
  border-radius: 8px;
  height: 38px;
  border: 1px solid #bdbbbb;
  padding-left: 10px;
  width: 300px;
  font-size: 0.875rem;
}

.subscribe-form-btn {
  background-color: #25252d;
  margin-left: 0.5em;
  color: white;
  border-radius: 8px;
  padding: 0.5em 0.75em;
  font-size: 1rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.subscribe-form-btn:focus,
.subscribe-form-btn:hover {
  cursor: pointer;
}

.store-logo {
  height: 80px;
  width: 80px;
  background-color: #ff7d52;
  color: white;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.75rem;
  text-align: center;
  font-weight: 500;
  margin-top: -40px;
  margin-bottom: 0.75em;
}

.store-logo:hover,
.store-logo:focus {
  cursor: pointer;
}

.store-description {
  max-width: 60ch;
  text-align: center;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  font-size: 0.875rem;
}

.powered-by {
  position: absolute;
  bottom: 0;
}

.product-gallery {
  width: 100%;
  padding: 1.5em;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 2em;
}

